--- a/GithubBlocks/index.html
+++ b/GithubBlocks/index.html
@@ -11,16 +11,23 @@
     <div>
     <p></p>
     </div>
+    <div class="background">
+        <p><h1>Github Blocks</h1></p>
     <div class="block1">
         <img src="https://octodex.github.com/images/gangnamtocat.png">
         <img src="https://octodex.github.com/images/pusheencat.png">
         <img src="https://octodex.github.com/images/Mardigrastocat.png">
     </div>
     <div class="block2">
-
+        <img src="https://octodex.github.com/images/justicetocat.jpg">
+        <img src="https://octodex.github.com/images/saritocat.png">
     </div>
     <div class="block3">
-
+        <img src="https://octodex.github.com/images/linktocat.jpg">
+        <img src="https://octodex.github.com/images/cherryontop-o-cat.png">
+        <img src="https://octodex.github.com/images/plumber.jpg">
+        </div>
+        <p>Images from <a href="https://octodex.github.com/">Github Octodex</a></p>
     </div>
 </body>
 </html>
